--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </p>
       </div>
     </div>
-    <div class="col-md-6 col-sm-6 d-flex">
+    <div class="col-md-6 d-flex">
       <div class="d-flex w-100 ">
         <div class="text col-6 mywidth">
           <img src="images/model_2.jpg" class="img-fluid">
@@ -189,7 +189,9 @@
   </div>
   </div>
   <div class="row row-flex justify-content-between">
-    <div class="col-md-6">
+    <div class="owl-carousel slide-one-item">
+      <div class="item">
+      <div class="col-md-6">
         <img src="images/img_2.jpg" class="img-fluid" alt=""/>
       </div>
       <div class="col-md-6">
@@ -202,6 +204,10 @@
         <div class=" pt-3">
         <img src="images/img_1.jpg" class="img-fluid mt-auto" alt=""/>
         </div>
+      </div>
+
+
+      </div>
       </div>
     </div>
     <div class="d-flex justify-content-between mb-5 linkc">
@@ -237,6 +243,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="js/owl.carousel.min.js+main.js.pagespeed.jc.Xm0G814cu7.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/min.js/0.1.0/$.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="https://unpkg.com/feather-icons"></script>
