--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </div>
 </div>
 </div>
- <section class="my-2">    
+ <section class="my-2 container">    
       
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators" id="myCarousel">
